2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/src/Makefile.am: Add missing explicit link to pocc-utils.

2011-07-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-ptile.c,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Add support for option --ptile-fts, to
	activate full-tile separation in PTile.

2011-07-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update, fix
	potential infinite loop in compute_regressions.

2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Minor update.

2011-07-25  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to pocc 1.0.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Update/Improve.
	* tests/scripts/conflist-passthru.txt: New. Mini configuration
	file for passthru testing.
	* tests/Makefile.am: Update accordingly, provide
	correctness-check-passthru rule.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_perfcorrect.sh: Update.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/conflist-small.txt,
	* tests/scripts/conflist-large.txt: New. Store the flag to be tested.
	* tests/scripts/checker_perfcorrect.sh: Use the flag files instead
	of hardwired configurations.

2011-07-24  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/data_to_csv.sh,
	* tests/scripts/compute_regressions.sh,