@@ -37,7 +37,7 @@
 # ifndef POCC_RELEASE_MODE
 #  define POCC_NB_OPTS				72
 # else
-#  define POCC_NB_OPTS				65
+#  define POCC_NB_OPTS				66
 # endif
 
 # define POCC_OPT_HELP				0
@@ -107,13 +107,13 @@
 # define POCC_OPT_PUNROLL_AND_JAM      		56
 # define POCC_OPT_PUNROLL_SIZE      		57
 
-# define POCC_OPT_VECTORIZER			58
-# define POCC_OPT_VECT_MARK_PAR_LOOPS    	59
-# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  60
-# define POCC_OPT_VECT_SINK_ALL_LOOPS		61
-# define POCC_OPT_STORCOMPACT			62
-# define POCC_OPT_AC_KEEP_OUTERPAR		63
-# define POCC_OPT_AC_KEEP_VECTORIZED		64
+# define POCC_OPT_VECTORIZER			59
+# define POCC_OPT_VECT_MARK_PAR_LOOPS    	60
+# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  61
+# define POCC_OPT_VECT_SINK_ALL_LOOPS		62
+# define POCC_OPT_STORCOMPACT			63
+# define POCC_OPT_AC_KEEP_OUTERPAR		64
+# define POCC_OPT_AC_KEEP_VECTORIZED		65
 
 # ifndef POCC_RELEASE_MODE
 #  define POCC_OPT_CODEGEN_TIMERCODE		65
